# loci

./: .gitignore  AGENTS.md  Cargo.toml  README.md  default_config.toml
.github/workflows/: test.yml
src/: api.rs  cli.rs  config.rs  error.rs  gguf.rs  gguf_types.rs  inference.rs  lib.rs  loader.rs  main.rs  model.rs  model_config.rs  profiling.rs  render.rs  session.rs  tokenizer.rs  types.rs
src/api/: handlers.rs  server.rs  types.rs  worker.rs
src/cli/: mod.rs
src/config/: file_config.rs  generation_config.rs  inference_config.rs  mod.rs  model_cache_config.rs  model_config.rs  parser.rs  tokenizer_config.rs
src/config/parser/: deepseek2.rs  lfm2.rs  utility.rs
src/gguf/: loader.rs  mod.rs  types.rs
src/inference/: engine.rs  generation_context.rs  generation_handler.rs  mod.rs  model_cache.rs  reasoning_supervisor.rs  sampler.rs  stop_pattern_matcher.rs  tool_calling_supervisor.rs  tool_formatter.rs  types.rs
src/model/: lfm2_model.rs  mod.rs  model.rs  model_base.rs  model_impls.rs  utility.rs
src/model/model_impls/: deepseek2.rs  lfm2.rs
src/session/: session.rs  session_base.rs  session_manager.rs
src/tokenizer/: mod.rs
tests/: api_server.rs  config_file_loading.rs  pipeline_generation.rs
tests/fixtures/: mod.rs
