[package]
name = "loci"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
byteorder = "1.5.0"
candle-core = { version = "0.10.2" }
candle-flash-attn = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
half = "2.7.1"
memmap2 = "0.9.10"
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.21.4"
smart-default = "0.7.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokenizers = "0.22.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
