[package]
name = "loci"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
axum = "0.8.9"
byteorder = "1.5.0"
candle-core = { version = "0.10.2" }
candle-flash-attn = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.32"
half = "2.7.1"
memmap2 = "0.9.10"
minijinja = { version = "2.19.0", features = ["loader", "builtins", "json"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
nvtx = "1.3.0"
once_cell = "1.21.4"
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smart-default = "0.7.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokenizers = "0.22.2"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.10", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["v4", "fast-rng"] }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
